src/objects/RecurringDonationChangeLog__c.object
<CustomObject>
    <description>When &quot;Enable Recurring Donation Change Log&quot; in NPSP Settings is enabled, NPSP creates a Recurring Donation Change Log record each time the amount, schedule, or campaign fields of a Recurring Donation are updated.</description>
    <label>Recurring Donation Change Log</label>
    <nameField>
        <displayFormat>RDCH-{0000000}</displayFormat>
        <label>Recurring Donation Change Log Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Donation Change Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>ChangeType__c</fullName>
        <description>The type of change (Upgrade, Downgrade, etc.) this Change Log record represents.</description>
        <inlineHelpText>The type of change (Upgrade, Downgrade, etc.) this Change Log record represents.</inlineHelpText>
        <label>Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <description>The Effective Date of the Recurring Donation when this change occurred.</description>
        <inlineHelpText>The Effective Date of the Recurring Donation when this change occurred.</inlineHelpText>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NewAmount__c</fullName>
        <description>The new Amount for the related Recurring Donation.</description>
        <inlineHelpText>The new Amount for the related Recurring Donation.</inlineHelpText>
        <label>New Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewAnnualValue__c</fullName>
        <description>The new annual value for this Recurring Donation, based on the amount and schedule.</description>
        <inlineHelpText>The new annual value for this Recurring Donation, based on the amount and schedule.</inlineHelpText>
        <label>New Annual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The new Campaign for the related Recurring Donation.</description>
        <inlineHelpText>The new Campaign for the related Recurring Donation.</inlineHelpText>
        <label>New Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Recurring Donation Change Log (New Campaign)</relationshipLabel>
        <relationshipName>RDChangeLogNewCampaign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewExpectedTotalValue__c</fullName>
        <description>The new expected total value for this Fixed Recurring Donation, based on the amount and schedule.</description>
        <inlineHelpText>The new expected total value for this Fixed Recurring Donation, based on the amount and schedule.</inlineHelpText>
        <label>New Expected Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewInstallmentFrequency__c</fullName>
        <description>The new Installment Frequency for the related Recurring Donation.</description>
        <inlineHelpText>The new Installment Frequency for the related Recurring Donation.</inlineHelpText>
        <label>New Installment Frequency</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewInstallmentPeriod__c</fullName>
        <description>The new Installment Period for the related Recurring Donation.</description>
        <inlineHelpText>The new Installment Period for the related Recurring Donation.</inlineHelpText>
        <label>New Installment Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewPaymentMethod__c</fullName>
        <description>The new Payment Method for the related Recurring Donation.</description>
        <inlineHelpText>The new Payment Method for the related Recurring Donation.</inlineHelpText>
        <label>New Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewPlannedInstallments__c</fullName>
        <description>The new number of installments (donations) you expect to receive. For Fixed-Length Recurring Donations only.</description>
        <inlineHelpText>The new number of installments (donations) you expect to receive. For Fixed-Length Recurring Donations only.</inlineHelpText>
        <label>New Number of Planned Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewRecurringType__c</fullName>
        <description>The new Recurring Type for the related Recurring Donation.</description>
        <inlineHelpText>The new Recurring Type for the related Recurring Donation.</inlineHelpText>
        <label>New Recurring Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewStatusReason__c</fullName>
        <description>The new Status Reason for the related Recurring Donation.</description>
        <inlineHelpText>The new Status Reason for the related Recurring Donation.</inlineHelpText>
        <label>New Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewStatus__c</fullName>
        <description>The new Status for the related Recurring Donation.</description>
        <inlineHelpText>The new Status for the related Recurring Donation.</inlineHelpText>
        <label>New Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousAmount__c</fullName>
        <description>The previous Amount for the related Recurring Donation.</description>
        <inlineHelpText>The previous Amount for the related Recurring Donation.</inlineHelpText>
        <label>Previous Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PreviousAnnualValue__c</fullName>
        <description>The previous annual value for this Recurring Donation, based on the amount and schedule</description>
        <inlineHelpText>The previous annual value for this Recurring Donation, based on the amount and schedule</inlineHelpText>
        <label>Previous Annual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PreviousCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The previous Campaign for the related Recurring Donation.</description>
        <inlineHelpText>The previous Campaign for the related Recurring Donation.</inlineHelpText>
        <label>Previous Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Recurring Donation Change Log (Previous Campaign)</relationshipLabel>
        <relationshipName>RDChangeLogPreviousCampaign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreviousExpectedTotalValue__c</fullName>
        <description>The previous expected total value for this Fixed Recurring Donation, based on the amount and schedule.</description>
        <inlineHelpText>The previous expected total value for this Fixed Recurring Donation, based on the amount and schedule.</inlineHelpText>
        <label>Previous Expected Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PreviousInstallmentFrequency__c</fullName>
        <description>The previous Installment Frequency for the related Recurring Donation.</description>
        <inlineHelpText>The previous Installment Frequency for the related Recurring Donation.</inlineHelpText>
        <label>Previous Installment Frequency</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreviousInstallmentPeriod__c</fullName>
        <description>The previous Installment Period for the related Recurring Donation.</description>
        <inlineHelpText>The previous Installment Period for the related Recurring Donation.</inlineHelpText>
        <label>Previous Installment Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousPaymentMethod__c</fullName>
        <description>The previous Payment Method for the related Recurring Donation.</description>
        <inlineHelpText>The previous Payment Method for the related Recurring Donation.</inlineHelpText>
        <label>Previous Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousPlannedInstallments__c</fullName>
        <description>The previous number of installments (donations) you expect to receive. For Fixed-Length Recurring Donations only.</description>
        <inlineHelpText>The previous number of installments (donations) you expect to receive. For Fixed-Length Recurring Donations only.</inlineHelpText>
        <label>Previous Number of Planned Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreviousRecurringType__c</fullName>
        <description>The previous Recurring Type for the related Recurring Donation.</description>
        <inlineHelpText>The previous Recurring Type for the related Recurring Donation.</inlineHelpText>
        <label>Previous Recurring Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousStatusReason__c</fullName>
        <description>The previous Status Reason for the related Recurring Donation.</description>
        <inlineHelpText>The previous Status Reason for the related Recurring Donation.</inlineHelpText>
        <label>Previous Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousStatus__c</fullName>
        <description>The previous Status for the related Recurring Donation.</description>
        <inlineHelpText>The previous Status for the related Recurring Donation.</inlineHelpText>
        <label>Previous Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecurringDonation__c</fullName>
        <description>The Recurring Donation related to this Change Log record.</description>
        <inlineHelpText>The Recurring Donation related to this Change Log record.</inlineHelpText>
        <label>Recurring Donation</label>
        <referenceTo>npe03__Recurring_Donation__c</referenceTo>
        <relationshipLabel>Recurring Donation Change Log</relationshipLabel>
        <relationshipName>RDChangeLog</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>